--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,13 @@ html {
 
   /* Other */
   font-size: 62.5%;
+  font-family: Arial, Helvetica, sans-serif;
 
   /* CSS Varialbes */
-  --text: hsla(0, 5%, 10%, 0.9);
+  --text: hsla(0, 5%, 25%, 0.7);
+  --button-borders: hsla(0, 1%, 20%, 0.6);
+  --button-background: hsla(0, 0%, 97%, 1.0);
+  --button-background-hover: hsla(0, 0%, 100%, 1.0);
 }
 
 *,
@@ -21,35 +25,71 @@ html {
   box-sizing: inherit;
 }
 
-.body {
-  height: 100vh;
-}
-
 .menu {
   /* Display & Box Model */
-  width: 342px;
-  margin: 40vh auto;
-
-  /* Other */
-  font-size: 2rem;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 
 .menuBar {
-  display: inline-block;
+  width: 375px;
+  /* Other */
+  font-size: 1.5rem;
+}
+
+.menuBar ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .menuBar li {
   /* Display & Box Model */
-  display: inline-block;
-  border: 1px solid black;
+  border: 1px solid var(--button-borders);
 
   /* Other */
+  background: var(--button-background);
   color: var(--text);
+  text-align: center;
 }
 
-.menuBar span {
+.menuBar i {
+  padding: 2rem;
+}
+
+span {
+  margin-top: .5rem;
+  font-weight: 700;
+  font-size: 1.2rem;
+  opacity: 0;
+  display: none;
+
+  transition: opacity 2000ms linear;
+}
+
+/********************
+|| Hover Styles
+*********************/
+.menuBar li:hover {
+  color: hsla(0, 0%, 0%, 1.0);
+}
+
+.menuBar li:hover span {
+  opacity: 1.0;
   display: block;
 }
+
+.menuBar li:hover i {
+  padding-top: 1rem;
+  padding-bottom: 0;
+}
+
+.menuBar li:hover {
+  background: var(--button-background-hover);
+}
+
+/* use an approach of padding-top (look at your codepen) */
 
 /********************
 || Utilities
@@ -59,5 +99,5 @@ html {
 }
 
 .troubleshooting {
-  border: 1px solid red;
+  outline: 1px solid red;
 }
